# gestion_stocks_app_PostGres

./: .env_old  .gitignore  Cython_Windows_VSCode.md  README.md  accueil.py  audit_core.md  audit_gestion_stocks_rapport_final.md  audit_security.md  audit_ui.md  gmao_industrie_data.dump  procedure Git.md  pyproject.toml  requirements.txt  setup.py
APP/: droits_table  main.py  main_window.py  main_window_selection_menu_patch.py
database/: database_complete_consolidated.sql  extraction db.md
docs/: COMMANDES_README.md  CORRECTIF_MOUVEMENT_CONTROLLER.md  EMPLACEMENT_EXTENSION_README.md  IMPLEMENTATION_COMPLETE.md  MOUVEMENTS_README.md  RESOLUTION_PROBLEME.md  STATUTS_MOUVEMENT_README.md  procedure Git.md
tests/: conftest.py  test_piece_service.py  test_repository_i18n.py
tools/: apply_mouvement_statut_migration.py  apply_reception_workflow_schema.py  check_commande_structure.py  check_db.py  check_ligne_commande_structure.py  check_lot_reception.py  check_mouvement_data.py  check_mouvement_structure.py  check_structure.py  debug_reception_detailed.py  debug_reception_status.py  demo_emplacement_extension.py  demo_nouveau_workflow.py  execute_reception_migration.py  fix_reception_logic.py  init_db.py  init_emplacement_extension.py  init_mouvement_tables.py  prepare_test_reception.py  reset_commande_for_reception.py  reset_commande_test.py  test_boutons_quick.py  test_commande_ui.py  test_commande_view_buttons.py  test_commande_workflow.py  test_db_connection.py  test_dialog_simple.py  test_emplacement_extension.py  test_emplacement_integration.py  test_integration_final.py  test_integration_reception.py  test_mouvement_controller_fix.py  test_reception_complete.py  test_reception_dialog_logic.py  test_reception_system.py  test_reception_ui.py  test_reception_ui_fixed.py  (+3 more)
(+83 files in other folders)
