[build-system]
# Build requirements (all OS)
# - Windows: requires MSVC Build Tools when compiling C extensions
# - Linux: requires build-essential and python3-dev (or distro equivalent)
# - macOS: requires Xcode Command Line Tools
requires = ["setuptools>=68", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gestion_stocks_app"
version = "0.1.0"
description = "Stock/GMAO application (PySide6 + PostgreSQL)"
requires-python = ">=3.10"
authors = [{ name = "R. Hergot" }]
readme = { text = "Package for the stock management application.", content-type = "text/plain" }

# Runtime dependencies (synced from requirements.txt)
dependencies = [
  # GUI
  "PySide6>=6.6.0",
  # Env/config
  "python-dotenv>=1.0.0",
  # Dates
  "python-dateutil>=2.8.2",
  # Security
  "bcrypt>=4.0.0",
  # Templates/PDF
  "jinja2>=3.1.2",
  "pdfkit>=1.0.0",
  # Database (PostgreSQL)
  "psycopg2-binary>=2.9.9",
]

# Optional command-line entry point (works on Windows/Linux/macOS)
# After installation, you could run `gestion-stocks` to start the app
# Uncomment when main() is stable as an entry point in APP/main.py
# [project.scripts]
# gestion-stocks = "APP.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["APP*"]

# Include non-Python files (e.g., translations, SQL files) inside the package
[tool.setuptools.package-data]
# If translations are moved under APP/, they will be included
"APP" = [
  "**/*.qm",   # Qt translation files
  "**/*.sql",  # SQL schemas/queries
]

# OS-specific notes:
# - Windows: ensure MSVC (Build Tools) installed for Cython builds
# - Linux: apt install build-essential python3-dev (or similar)
# - macOS: xcode-select --install
